--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -103,7 +103,7 @@ jobs:
           useLockFile: false
 
       - name: 🛠 Setup Database
-        run: npx prisma migrate reset --force && npx prisma db push
+        run: npx prisma migrate reset --force
 
       - name: ⚙️ Build
         run: npm run build
