--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,9 +98,10 @@ jobs:
           node-version: 16
 
       - name: 📥 Download deps
-        uses: bahmutov/npm-install@v1
-        with:
-          useLockFile: false
+        # uses: bahmutov/npm-install@v1
+        # with:
+        #   useLockFile: false
+        run: npm i
 
       - name: 🛠 Setup Database
         run: npx prisma migrate reset --force
