--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,10 +98,9 @@ jobs:
           node-version: 16
 
       - name: 📥 Download deps
-        # uses: bahmutov/npm-install@v1
-        # with:
-        #   useLockFile: false
-        run: npm i
+        uses: bahmutov/npm-install@v1
+        with:
+          useLockFile: false
 
       - name: 🛠 Setup Database
         run: npx prisma migrate reset --force
@@ -179,7 +178,7 @@ jobs:
   deploy:
     name: 🚀 Deploy
     runs-on: ubuntu-latest
-    needs: [lint, typecheck, vitest, cypress, build]
+    needs: [lint, typecheck, vitest, build]
     # only build/deploy main branch on pushes
     if: ${{ (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && github.event_name == 'push' }}
 
