--- a/package.json
+++ b/package.json
@@ -32,17 +32,19 @@
   ],
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@prisma/client": "^3.15.0",
+    "@prisma/client": "^4.10.1",
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
     "@remix-run/server-runtime": "^1.5.1",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/react-modal": "^3.13.1",
     "@types/xml2js": "^0.4.11",
     "bcryptjs": "^2.4.3",
     "marked": "^4.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.16.1",
     "tiny-invariant": "^1.2.0",
     "xml2js": "^0.4.23"
   },
@@ -75,7 +77,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "prisma": "^3.15.0",
+    "prisma": "^4.10.1",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.1.0",
     "ts-node": "^10.8.1",
