--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.16.1",
     "tiny-invariant": "^1.2.0",
+    "use-sound": "^4.0.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
