add mail confirm

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 DATABASE_URL="file:./data.db?connection_limit=1"
 SESSION_SECRET="super-duper-s3cret"
+
+ADMIN_EMAIL=admin@web.journal
+ADMIN_PASS=adminiscool
+
+MAIL_USER=
+MAIL_PASS=
+SMTP_URL=
