--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@remix-run/serve": "^1.13.0",
     "@remix-run/server-runtime": "^1.13.0",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/react-modal": "^3.13.1",
     "@types/xml2js": "^0.4.11",
     "bcryptjs": "^2.4.3",
     "marked": "^4.0.16",
+    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
