--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:remix": "remix build",
     "dev": "run-p dev:*",
     "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "cross-env NODE_ENV=development binode --require ./mocks -- @remix-run/dev:remix dev",
+    "dev:remix": "remix dev",
     "format": "prettier --write .",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
@@ -33,15 +33,17 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "^4.10.1",
-    "@remix-run/node": "^1.13.0",
-    "@remix-run/react": "^1.13.0",
-    "@remix-run/serve": "^1.13.0",
-    "@remix-run/server-runtime": "^1.13.0",
+    "@remix-run/node": "2.2.0",
+    "@remix-run/react": "2.2.0",
+    "@remix-run/serve": "2.2.0",
+    "@remix-run/server-runtime": "2.2.0",
+    "@remix-run/v1-route-convention": "^0.1.4",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/nodemailer": "^6.4.7",
     "@types/react-modal": "^3.13.1",
     "@types/xml2js": "^0.4.11",
     "bcryptjs": "^2.4.3",
+    "isbot": "^3.7.0",
     "marked": "^4.0.16",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
@@ -53,8 +55,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.3.1",
-    "@remix-run/dev": "^1.5.1",
-    "@remix-run/eslint-config": "^1.5.1",
+    "@remix-run/dev": "2.2.0",
+    "@remix-run/eslint-config": "2.2.0",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -84,8 +86,8 @@
     "tailwindcss": "^3.1.0",
     "ts-node": "^10.8.1",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.3",
-    "vite": "^2.9.10",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9",
     "vite-tsconfig-paths": "^3.5.0",
     "vitest": "^0.14.1"
   },
