--- a/package.json
+++ b/package.json
@@ -3,22 +3,13 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "run-s build:*",
-    "build:css": "npm run generate:css -- --minify",
-    "build:remix": "remix build",
-    "dev": "run-p dev:*",
-    "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "remix dev",
+    "build": "remix build",
+    "dev": "remix dev -c \"npm run dev:serve\"",
+    "dev:serve": "binode -- @remix-run/serve:remix-serve ./build/index.js",
     "format": "prettier --write .",
-    "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma migrate dev && prisma db seed",
-    "start": "remix-serve build",
-    "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
-    "test": "vitest",
-    "test:e2e:dev": "start-server-and-test dev http://localhost:3000 \"npx cypress open\"",
-    "pretest:e2e:run": "npm run build",
-    "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"npx cypress run\"",
+    "start": "remix-serve ./build/index.js",
     "typecheck": "tsc -b && tsc -b cypress",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
   },
@@ -36,9 +27,8 @@
     "@remix-run/node": "2.2.0",
     "@remix-run/react": "2.2.0",
     "@remix-run/serve": "2.2.0",
+    "@remix-run/css-bundle": "2.2.0",
     "@remix-run/server-runtime": "2.2.0",
-    "@remix-run/v1-route-convention": "^0.1.4",
-    "@tailwindcss/line-clamp": "^0.4.0",
     "@types/nodemailer": "^6.4.7",
     "@types/react-modal": "^3.13.1",
     "@types/xml2js": "^0.4.11",
@@ -49,6 +39,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "tailwind": "^4.0.0",
     "tiny-invariant": "^1.2.0",
     "use-sound": "^4.0.1",
     "xml2js": "^0.4.23"
