--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "build": "remix build",
     "dev": "remix dev -c \"npm run dev:serve\"",
     "dev:serve": "binode -- @remix-run/serve:remix-serve ./build/index.js",
+    "start": "remix-serve ./build/index.js",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma migrate dev && prisma db seed",
-    "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc -b && tsc -b cypress",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "typecheck": "tsc -b ",
+    "validate": "run-p lint typecheck"
   },
   "prettier": {
     "singleQuote": true
@@ -24,11 +24,11 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "^4.10.1",
-    "@remix-run/node": "2.2.0",
-    "@remix-run/react": "2.2.0",
-    "@remix-run/serve": "2.2.0",
-    "@remix-run/css-bundle": "2.2.0",
-    "@remix-run/server-runtime": "2.2.0",
+    "@remix-run/node": "^2.2.0",
+    "@remix-run/react": "^2.2.0",
+    "@remix-run/serve": "^2.2.0",
+    "@remix-run/css-bundle": "^2.2.0",
+    "@remix-run/server-runtime": "^2.2.0",
     "@types/nodemailer": "^6.4.7",
     "@types/react-modal": "^3.13.1",
     "@types/xml2js": "^0.4.11",
@@ -46,8 +46,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.3.1",
-    "@remix-run/dev": "2.2.0",
-    "@remix-run/eslint-config": "2.2.0",
+    "@remix-run/dev": "^2.2.0",
+    "@remix-run/eslint-config": "^2.2.0",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
