--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev -c \"npm run dev:serve\"",
+    "dev": "remix dev --manual -c \"npm run dev:serve\"",
     "dev:serve": "binode -- @remix-run/serve:remix-serve ./build/index.js",
     "start": "remix-serve ./build/index.js",
     "format": "prettier --write .",
