parse out html descriptions in items

--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "^4.10.1",
+    "@remix-run/css-bundle": "^2.2.0",
     "@remix-run/node": "^2.2.0",
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
-    "@remix-run/css-bundle": "^2.2.0",
     "@remix-run/server-runtime": "^2.2.0",
     "@types/nodemailer": "^6.4.7",
     "@types/react-modal": "^3.13.1",
     "@types/xml2js": "^0.4.11",
     "bcryptjs": "^2.4.3",
+    "html-to-text": "^9.0.5",
     "isbot": "^3.7.0",
     "marked": "^4.0.16",
     "nodemailer": "^6.9.1",
@@ -54,6 +55,7 @@
     "@testing-library/user-event": "^14.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.3",
+    "@types/html-to-text": "^9.0.4",
     "@types/marked": "^4.0.3",
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.28",
