--- a/package.json
+++ b/package.json
@@ -29,9 +29,6 @@
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
     "@remix-run/server-runtime": "^2.2.0",
-    "@types/nodemailer": "^6.4.7",
-    "@types/react-modal": "^3.13.1",
-    "@types/xml2js": "^0.4.11",
     "bcryptjs": "^2.4.3",
     "html-to-text": "^9.0.5",
     "isbot": "^3.7.0",
@@ -43,16 +40,12 @@
     "tailwind": "^4.0.0",
     "tiny-invariant": "^1.2.0",
     "use-sound": "^4.0.1",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "prisma": "^4.10.1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.3.1",
     "@remix-run/dev": "^2.2.0",
     "@remix-run/eslint-config": "^2.2.0",
-    "@testing-library/cypress": "^8.0.3",
-    "@testing-library/dom": "^8.13.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/user-event": "^14.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.3",
     "@types/html-to-text": "^9.0.4",
@@ -60,29 +53,27 @@
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^1.3.2",
+    "@types/nodemailer": "^6.4.7",
+    "@types/react-modal": "^3.13.1",
+    "@types/xml2js": "^0.4.11",
     "autoprefixer": "^10.4.7",
     "binode": "^1.0.5",
     "c8": "^7.11.3",
     "cross-env": "^7.0.3",
-    "cypress": "^10.0.3",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "happy-dom": "^5.2.0",
-    "msw": "^1.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "prisma": "^4.10.1",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.1.0",
     "ts-node": "^10.8.1",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.14.1"
+    "vite-tsconfig-paths": "^3.5.0"
   },
   "engines": {
     "node": ">=18"
