--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma migrate dev && prisma db seed",
     "typecheck": "tsc -b ",
-    "validate": "run-p lint typecheck"
+    "validate": "run-p lint typecheck",
+    "prepare": "husky install"
   },
   "prettier": {
     "singleQuote": true
@@ -34,14 +35,14 @@
     "isbot": "^3.7.0",
     "marked": "^4.0.16",
     "nodemailer": "^6.9.1",
+    "prisma": "^4.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "tailwind": "^4.0.0",
     "tiny-invariant": "^1.2.0",
     "use-sound": "^4.0.1",
-    "xml2js": "^0.4.23",
-    "prisma": "^4.10.1"
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.2.0",
@@ -51,9 +52,9 @@
     "@types/html-to-text": "^9.0.4",
     "@types/marked": "^4.0.3",
     "@types/node": "^17.0.41",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/nodemailer": "^6.4.7",
     "@types/react-modal": "^3.13.1",
     "@types/xml2js": "^0.4.11",
     "autoprefixer": "^10.4.7",
@@ -63,6 +64,8 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "happy-dom": "^5.2.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
@@ -80,5 +83,10 @@
   },
   "prisma": {
     "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
+  },
+  "lint-staged": {
+    "app/**/*.{ts,css,tsx}": [
+      "prettier --write"
+    ]
   }
 }
