--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "html-to-text": "^9.0.5",
     "isbot": "^3.7.0",
+    "jsdom": "^23.0.1",
     "marked": "^4.0.16",
     "nodemailer": "^6.9.1",
     "prisma": "^4.10.1",
@@ -50,6 +51,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.3",
     "@types/html-to-text": "^9.0.4",
+    "@types/jsdom": "^21.1.6",
     "@types/marked": "^4.0.3",
     "@types/node": "^17.0.41",
     "@types/nodemailer": "^6.4.7",
