--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "^4.10.1",
-    "@remix-run/css-bundle": "^2.2.0",
-    "@remix-run/node": "^2.2.0",
-    "@remix-run/react": "^2.2.0",
-    "@remix-run/serve": "^2.2.0",
-    "@remix-run/server-runtime": "^2.2.0",
+    "@remix-run/css-bundle": "^2.5.0",
+    "@remix-run/node": "^2.5.0",
+    "@remix-run/react": "^2.5.0",
+    "@remix-run/serve": "^2.5.0",
+    "@remix-run/server-runtime": "^2.5.0",
     "bcryptjs": "^2.4.3",
     "html-to-text": "^9.0.5",
     "isbot": "^3.7.0",
@@ -46,8 +46,8 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.2.0",
-    "@remix-run/eslint-config": "^2.2.0",
+    "@remix-run/dev": "^2.5.0",
+    "@remix-run/eslint-config": "^2.5.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.3",
     "@types/html-to-text": "^9.0.4",
@@ -76,9 +76,7 @@
     "tailwindcss": "^3.1.0",
     "ts-node": "^10.8.1",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.9",
-    "vite-tsconfig-paths": "^3.5.0"
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=18"
