--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
     "bcryptjs": "^2.4.3",
+    "howler": "2.1.3",
     "html-to-text": "^9.0.5",
     "isbot": "^3.7.0",
     "jsdom": "^23.0.1",
@@ -41,7 +42,6 @@
     "react-modal": "^3.16.1",
     "tailwind": "^4.0.0",
     "tiny-invariant": "^1.2.0",
-    "use-sound-esm": "4.0.2",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
@@ -49,6 +49,7 @@
     "@remix-run/eslint-config": "^2.8.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.3",
+    "@types/howler": "2.1.2",
     "@types/html-to-text": "^9.0.4",
     "@types/jsdom": "^21.1.6",
     "@types/marked": "^4.0.3",
