--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -49,6 +49,29 @@ jobs:
       - name: 🔎 Type check
         run: npm run typecheck --if-present
 
+  test:
+    name: ✅ Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: 📥 Download deps
+        uses: bahmutov/npm-install@v1
+        with:
+          useLockFile: true
+
+      - name: 🔎 Type check
+        run: npm run test
+
   build:
     name: 🔧 Build app
     runs-on: ubuntu-latest
