--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
   ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
-    "types": ["@remix-run/node", "vite/client"],
+    "types": ["@remix-run/node", "vite/client", "vitest/importMeta"],
 
     "isolatedModules": true,
     "esModuleInterop": true,
