--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,8 @@
     "skipLibCheck": true,
 
     // Vite takes care of building everything, not tsc.
-    "noEmit": true
+    "noEmit": true,
+
+    "incremental": false
   }
 }
