--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "remix vite:dev --host",
-    "dev:serve": "binode -- @remix-run/serve:remix-serve ./build/index.js",
+    "dev": "react-router dev --host",
     "dev:test": "vitest watch",
-    "build": "remix vite:build",
-    "start": "remix-serve ./build/server/index.js",
+    "build": "react-router build",
+    "start": "react-router-serve ./build/server/index.js",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma migrate dev && prisma db seed",
-    "typecheck": "tsc -b ",
+    "typecheck": "react-router typegen && tsc -b",
+    "healthcheck": "npm run lint && npm run typecheck && npm run test",
     "validate": "run-p lint typecheck",
     "prepare": "husky install",
     "test": "vitest run"
@@ -28,9 +28,9 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "^4.10.1",
-    "@remix-run/node": "^2.14.0",
-    "@remix-run/react": "^2.14.0",
-    "@remix-run/serve": "^2.14.0",
+    "@react-router/fs-routes": "^7.0.1",
+    "@react-router/node": "^7.0.0",
+    "@react-router/serve": "^7.0.0",
     "bcryptjs": "^2.4.3",
     "howler": "2.1.3",
     "html-to-text": "^9.0.5",
@@ -42,13 +42,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-router": "^7.0.0",
     "tailwind": "^4.0.0",
     "tiny-invariant": "^1.2.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.14.0",
-    "@remix-run/eslint-config": "^2.14.0",
+    "@react-router/dev": "^7.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.3",
     "@types/howler": "2.1.2",
@@ -61,7 +61,6 @@
     "@types/react-modal": "^3.13.1",
     "@types/xml2js": "^0.4.11",
     "autoprefixer": "^10.4.7",
-    "binode": "^1.0.5",
     "c8": "^7.11.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.17.0",
