--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,12 @@
     "**/.server/**/*.ts",
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
-    "**/.client/**/*.tsx"
+    "**/.client/**/*.tsx",
+    ".react-router/types/**/*"
   ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
-    "types": ["@remix-run/node", "vite/client", "vitest/importMeta"],
+    "types": ["@react-router/node", "vite/client", "vitest/importMeta"],
 
     "isolatedModules": true,
     "esModuleInterop": true,
@@ -30,6 +31,8 @@
     // Vite takes care of building everything, not tsc.
     "noEmit": true,
 
-    "incremental": false
+    "incremental": false,
+
+    "rootDirs": [".", "./.react-router/types"]
   }
 }
