--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "@react-router/fs-routes": "^7.0.1",
     "@react-router/node": "^7.0.1",
     "@react-router/serve": "^7.0.1",
+    "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "bcryptjs": "^2.4.3",
     "howler": "2.1.3",
     "html-to-text": "^9.0.5",
+    "install": "^0.13.0",
     "isbot": "^3.7.0",
     "jsdom": "^23.0.1",
     "marked": "^4.0.16",
     "nodemailer": "^6.9.1",
+    "npm": "^11.0.0",
     "prisma": "^4.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -81,6 +84,7 @@
     "tsconfig-paths": "^4.0.0",
     "typescript": "^5.1.6",
     "vite": "^5.4.8",
+    "vite-plugin-babel": "^1.3.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.1.5"
   },
