--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "eslint-plugin-react-hooks": "^5.0.0",
     "happy-dom": "^5.2.0",
     "husky": "^8.0.3",
