--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-router/fs-routes": "^7.0.1",
     "@react-router/node": "^7.0.1",
     "@react-router/serve": "^7.0.1",
+    "@tanstack/react-form": "^1.0.0",
     "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "bcryptjs": "^2.4.3",
     "howler": "2.1.3",
@@ -44,6 +45,7 @@
     "react-modal": "^3.16.1",
     "react-router": "^7.1.1",
     "tiny-invariant": "^1.2.0",
+    "valibot": "^1.0.0-rc.3",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
