--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@react-router/fs-routes": "^7.0.1",
     "@react-router/node": "^7.5.0",
     "@react-router/serve": "^7.5.0",
+    "@simplewebauthn/browser": "^13.1.0",
+    "@simplewebauthn/server": "^13.1.1",
     "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "bcryptjs": "^2.4.3",
     "howler": "2.1.3",
