--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma migrate dev && prisma db seed",
-    "typecheck": "react-router typegen && tsc -b",
+    "typecheck": "react-router typegen && tsc",
     "healthcheck": "npm run lint && npm run typecheck && npm run test",
     "validate": "run-p lint typecheck",
     "prepare": "husky install",
@@ -24,10 +24,10 @@
   ],
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@prisma/client": "^4.10.1",
-    "@react-router/fs-routes": "^7.0.1",
-    "@react-router/node": "^7.5.0",
-    "@react-router/serve": "^7.5.0",
+    "@prisma/client": "^6.7.0",
+    "@react-router/fs-routes": "^7.5.3",
+    "@react-router/node": "^7.5.3",
+    "@react-router/serve": "^7.5.3",
     "@simplewebauthn/browser": "^13.1.0",
     "@simplewebauthn/server": "^13.1.1",
     "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
@@ -40,16 +40,16 @@
     "marked": "^4.0.16",
     "nodemailer": "^6.9.1",
     "npm": "^11.0.0",
-    "prisma": "^4.10.1",
+    "prisma": "^6.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-modal": "^3.16.1",
-    "react-router": "^7.5.0",
+    "react-router": "^7.5.3",
     "tiny-invariant": "^1.2.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.5.0",
+    "@react-router/dev": "^7.5.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.3",
     "@types/howler": "2.1.2",
