--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "**/.client/**/*.tsx",
     ".react-router/types/**/*"
   ],
+  "exclude": ["**/__generated__/**"],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
     "types": ["@react-router/node", "vite/client", "vitest/importMeta"],
