--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -22,3 +22,4 @@ jobs:
         uses: creyD/prettier_action@v4.3
         with:
           prettier_options: --write .
+          commit_message: format
