--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@simplewebauthn/server": "^13.1.1",
     "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.5.0",
     "howler": "2.1.3",
     "html-to-text": "^9.0.5",
     "install": "^0.13.0",
