--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-modal": "^3.16.1",
     "react-router": "^7.5.3",
     "tiny-invariant": "^1.2.0",
+    "valibot": "^1.1.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
