--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "isbot": "^3.7.0",
     "jsdom": "^23.0.1",
     "marked": "^4.0.16",
+    "node-cron": "^4.0.0",
     "nodemailer": "^6.9.1",
     "npm": "^11.0.0",
     "prisma": "^6.7.0",
