--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "install": "^0.13.0",
     "isbot": "^3.7.0",
     "marked": "^4.0.16",
+    "msw": "^2.8.6",
     "node-cron": "^4.0.0",
     "nodemailer": "^6.9.1",
     "npm": "^11.0.0",
