--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "@simplewebauthn/server": "^13.1.1",
     "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.5.0",
     "howler": "2.1.3",
     "html-to-text": "^9.0.5",
     "install": "^0.13.0",
     "isbot": "^3.7.0",
-    "jsdom": "^23.0.1",
     "marked": "^4.0.16",
+    "msw": "^2.8.6",
     "node-cron": "^4.0.0",
     "nodemailer": "^6.9.1",
     "npm": "^11.0.0",
@@ -49,7 +50,7 @@
     "react-router": "^7.5.3",
     "tiny-invariant": "^1.2.0",
     "valibot": "^1.1.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
@@ -57,7 +58,6 @@
     "@types/eslint": "^8.4.3",
     "@types/howler": "2.1.2",
     "@types/html-to-text": "^9.0.4",
-    "@types/jsdom": "^21.1.6",
     "@types/marked": "^4.0.3",
     "@types/nodemailer": "^6.4.7",
     "@types/react": "^19.0.0",
@@ -76,22 +76,20 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "happy-dom": "^5.2.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.1.0",
     "ts-node": "^10.8.1",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^5.1.6",
-    "vite": "^5.4.8",
+    "vite": "^6.3.5",
     "vite-plugin-babel": "^1.3.0",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.1.5"
+    "vitest": "^3.1.4"
   },
   "engines": {
     "node": ">=18"
