--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "howler": "2.1.3",
     "html-to-text": "^9.0.5",
