--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "dev": "react-router dev --host",
     "dev:test": "vitest watch",
-    "build": "prisma generate && react-router build",
+    "build": "npm run codegen && react-router build",
+    "codegen": "prisma generate && react-router typegen",
     "start": "react-router-serve ./build/server/index.js",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma generate && prisma migrate dev && prisma db seed",
-    "typecheck": "prisma generate && react-router typegen && tsc",
+    "typecheck": "npm run codegen && tsc",
     "healthcheck": "npm run lint && npm run typecheck && npm run test",
     "validate": "run-p lint typecheck",
     "prepare": "husky install",
