--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,25 +1,17 @@
-name: Format
-
-# This action works with pull requests and pushes
+name: autofix.ci
 on:
   pull_request:
   push:
-    branches:
-      - main
-
+permissions: {}
 jobs:
   prettier:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+      - run: |
+          npm i
+          npm format
+      - uses: autofix-ci/action@v1
         with:
-          # Make sure the actual branch is checked out when running on pull requests
-          ref: ${{ github.head_ref }}
-
-      - name: 💄 Format
-        uses: creyD/prettier_action@v4.3
-        with:
-          prettier_options: --write .
-          commit_message: format
+          commit-message: "format"
