--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-node@v4
       - run: |
           npm i
-          npm format
+          npm run format
       - uses: autofix-ci/action@v1
         with:
           commit-message: "format"
