use rss service

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "react-router dev --host",
     "dev:test": "vitest watch",
     "build": "npm run codegen && react-router build",
-    "codegen": "prisma generate && react-router typegen",
+    "codegen": "prisma generate && react-router typegen && node scripts/rss-client-types.mjs",
     "start": "react-router-serve ./build/server/index.js",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
@@ -40,6 +40,7 @@
     "html-to-text": "^9.0.5",
     "install": "^0.13.0",
     "isbot": "^3.7.0",
+    "json-schema-to-typescript": "^15.0.4",
     "marked": "^4.0.16",
     "msw": "^2.8.6",
     "node-cron": "^4.0.0",
