--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@react-router/serve": "^7.6.2",
     "@simplewebauthn/browser": "^13.1.0",
     "@simplewebauthn/server": "^13.1.1",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
     "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
@@ -68,7 +70,6 @@
     "@types/react-modal": "^3.13.1",
     "@types/xml2js": "^0.4.11",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "autoprefixer": "^10.4.7",
     "c8": "^7.11.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.17.0",
@@ -82,10 +83,9 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.14",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.1.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.11",
     "ts-node": "^10.8.1",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^5.1.6",
