--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "react-router-serve ./build/server/index.js",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "setup": "prisma generate && prisma migrate dev && prisma db seed",
+    "setup": "npm run codegen && prisma migrate dev && prisma db seed",
     "typecheck": "npm run codegen && tsc",
     "healthcheck": "npm run lint && npm run typecheck && npm run test",
     "validate": "run-p lint typecheck",
@@ -86,8 +86,8 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11",
-    "ts-node": "^10.8.1",
     "tsconfig-paths": "^4.0.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.1.6",
     "vite": "^7.0.4",
     "vite-plugin-babel": "^1.3.2",
@@ -98,7 +98,7 @@
     "node": ">=18"
   },
   "prisma": {
-    "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   },
   "lint-staged": {
     "app/**/*.{ts,css,tsx}": [
