--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ SESSION_SECRET="super-duper-s3cret"
 ADMIN_EMAIL=admin@web.journal
 ADMIN_PASS=adminiscool
 
-MAIL_USER=
-MAIL_PASS=
-SMTP_URL=
+MAIL_USER=mail@web.journal
+MAIL_PASS=mailiscool
+SMTP_URL=smtp.url
 
 SERVER_DOMAIN=localhost
