--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@simplewebauthn/server": "^13.1.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
-    "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
+    "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
@@ -48,8 +48,8 @@
     "nodemailer": "^6.9.1",
     "npm": "^11.0.0",
     "prisma": "^6.7.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-modal": "^3.16.1",
     "react-router": "^7.5.3",
     "tiny-invariant": "^1.2.0",
@@ -63,8 +63,8 @@
     "@types/howler": "2.1.2",
     "@types/marked": "^4.0.3",
     "@types/nodemailer": "^6.4.7",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@types/react-modal": "^3.13.1",
     "@types/xml2js": "^0.4.11",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
@@ -77,7 +77,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "^6.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "npm-run-all": "^4.1.5",
