--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "react-router": "^7.5.3",
     "tiny-invariant": "^1.2.0",
     "valibot": "^1.1.0",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vite-plugin-babel": "^1.3.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.6.3",
@@ -88,8 +90,6 @@
     "tsx": "^4.20.3",
     "typescript": "^5.1.6",
     "vite": "^7.0.4",
-    "vite-plugin-babel": "^1.3.2",
-    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^3.1.4"
   },
   "engines": {
