--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@simplewebauthn/server": "^13.1.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
-    "babel-plugin-react-compiler": "^19.1.0-rc.3",
+    "babel-plugin-react-compiler": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
@@ -74,7 +74,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-compiler": "^19.1.0-rc.3",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^6.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
